<resources>
    <string name="app_name">Pussies</string>

    <string name="random_pussy_title">Random Pussy</string>
    <string name="random_pussy_next_pussy">Next pussy</string>
    <string name="random_pussy_breed">%s</string>
    <string name="random_pussy_image">Image of pussy</string>
    <string name="random_pussy_error_message">Невозможно загрузить данные, возможно отсутсвует подключение к интернету или сервер не отвечает. Попробуйте позже</string>
    <string name="random_pussy_sadness">Печаль</string>
    <string name="random_pussy_add_remove_to_favorite">add/remove to favorite</string>
    <string name="random_pussy_favorites">Избранное</string>
    <string name="to_home">To random pussy screen</string>
    <string name="home_button">home button</string>
    <string name="remove_from_favorite">remove from favorite</string>

    <string name="favorites_title">Favorites</string>
    <string name="favorites_empty_list">Избранное пусто. Лайкните понравившиеся изображения и они появятся здесь.</string>

    <string name="detailed_info_title">detailed info</string>
    <string name="detailed_info_back">Назад</string>
    <string name="detailed_info_expand_more_less">expand more/less</string>
    <string name="detailed_info_pussy_description_example">The Abyssinian is easy to care for, and a joy to have in your home. They’re affectionate cats and love both people and other animals.</string>
    <string name="detailed_info_breed_name_s">Breed: %s</string>
    <string name="detailed_info_characteristic">Characteristic</string>
    <string name="detailed_info_weight_s">Weight: %s</string>
    <string name="detailed_info_temperament_s">Temperament: %s</string>
    <string name="detailed_info_origin_s">Origin: %s</string>
    <string name="detailed_info_life_span_s">Life Span: %s</string>
    <string name="detailed_info_indoor_s">Indoor: %s</string>
    <string name="detailed_info_child_friendly_s">Child Friendly: %s</string>
    <string name="detailed_info_cat_friendly_s">Cat Friendly: %s</string>
    <string name="detailed_info_dog_friendly_s">Dog Friendly: %s</string>
    <string name="detailed_info_stranger_friendly_s">Stranger Friendly: %s</string>
    <string name="detailed_info_adaptability_s">Adaptability: %s</string>
    <string name="detailed_info_affection_level_s">Affection Level: %s</string>
    <string name="detailed_info_energy_level_s">Energy Level: %s</string>
    <string name="detailed_info_health_issues_s">Health Issues: %s</string>
    <string name="detailed_info_intelligence_s">Intelligence: %s</string>
    <string name="detailed_info_social_needs_s">Social Needs: %s</string>
    <string name="detailed_info_vocalisation_s">Vocalisation: %s</string>
    <string name="detailed_info_wikipedia_url_s">Wikipedia URL: %s</string>
    <string name="detailed_info_hypoallergenic_s">Hypoallergenic: %s</string>
</resources>