<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailedInfo.DetailedInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topBarHeight"
        android:background="@color/dark_lavender"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/detailed_info_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/titleTextSize"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/iconsMargin"
            android:layout_marginTop="@dimen/iconsMargin"
            android:contentDescription="@string/detailed_info_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topBarHeight"
        app:layout_constraintTop_toTopOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/LLHorizontalPadding">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/pussyImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/error_pussy" />

                <ImageView
                    android:id="@+id/toggleFavorite"
                    android:layout_width="@dimen/iconsDimensions"
                    android:layout_height="@dimen/iconsDimensions"
                    android:layout_marginEnd="@dimen/heartMarginEnd"
                    android:contentDescription="@string/card_pussy_remove_from_favorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_non_active_heart" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/pussy_breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/breed_margin_vert"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/commonTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pussyImage"
                tools:text="breed" />

            <TextView
                android:id="@+id/breedDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/breedDescriptionBottomPadding"
                android:textSize="@dimen/commonTextSize"
                tools:text="@string/detailed_info_pussy_description_example" />

            <TextView
                android:id="@+id/stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/detailed_info_characteristic"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/commonTextSize"
                app:drawableEndCompat="@drawable/ic_expand_more"
                tools:ignore="UseCompoundDrawables"
                tools:text="Characteristic" />

            <LinearLayout
                android:id="@+id/statsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/statsLLPadding">

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_weight_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Weight: " />

                <TextView
                    android:id="@+id/temperament"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_temperament_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Temperament: " />

                <TextView
                    android:id="@+id/origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_origin_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Origin: " />

                <TextView
                    android:id="@+id/lifeSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_life_span_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Life Span: " />

                <TextView
                    android:id="@+id/indoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_indoor_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Indoor: " />

                <TextView
                    android:id="@+id/childFriendly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_child_friendly_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Child Friendly: " />

                <TextView
                    android:id="@+id/catFriendly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_cat_friendly_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Cat Friendly: " />

                <TextView
                    android:id="@+id/dogFriendly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_dog_friendly_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Dog Friendly: " />

                <TextView
                    android:id="@+id/strangerFriendly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_stranger_friendly_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Stranger Friendly: " />

                <TextView
                    android:id="@+id/adaptability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_adaptability_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Adaptability: " />

                <TextView
                    android:id="@+id/affectionLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_affection_level_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Affection Level: " />

                <TextView
                    android:id="@+id/energyLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_energy_level_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Energy Level: " />

                <TextView
                    android:id="@+id/healthIssues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_health_issues_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Health Issues: " />

                <TextView
                    android:id="@+id/intelligence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_intelligence_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Intelligence: " />

                <TextView
                    android:id="@+id/socialNeeds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_social_needs_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Social Needs: " />


                <TextView
                    android:id="@+id/vocalisation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_vocalisation_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Vocalisation: " />

                <TextView
                    android:id="@+id/wikipediaUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_wikipedia_url_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Wikipedia URL: " />

                <TextView
                    android:id="@+id/hypoallergenic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_info_hypoallergenic_s"
                    android:textSize="@dimen/commonTextSize"
                    tools:text="Hypoallergenic: " />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>